
/**
 * @author Japhy
 * @since 2020/11/6 13:55
 */
public interface Car {

    String getDescription();
}
